KAD-3236 Fix image alignment

--- a/src/packages/components/src/onboarding-modal/editor.scss
+++ b/src/packages/components/src/onboarding-modal/editor.scss
@@ -91,7 +91,7 @@
 			height: calc(100vh - 80px); /* Adjust height to span to footer */
 
 			display: flex;
-			align-items: baseline;
+			align-items: center;
 			justify-content: center;
 
 			img {
